samples/_failures_safe/1761128099_5d1223_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e8310e1.c: In function ‘main’:
./samples/SAFE/__tmp_3e8310e1.c:144:9: error: expected declaration or statement at end of input
  144 |         fprintf(stderr, "Error processing input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_3e8310e1.c:144:9: error: expected declaration or statement at end of input
